--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "bootstrap": "^4.4.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-burger-menu": "^2.6.13",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
+    "react-push-menu": "^3.1.2",
     "react-scripts": "3.4.1",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "semantic-ui-react": "^0.88.2",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
