--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-push-menu": "^3.1.2",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
     "semantic-ui-react": "^0.88.2",
